force-app/main/default/objects/copado__Environment__c/fields/Enable_PR_Approval__c.field-meta.xml
<CustomField>
    <fullName>Enable_PR_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable PR Approval</label>
    <type>Checkbox</type>
</CustomField>