force-app/main/default/objects/copado__Environment__c/fields/Git_base_branch__c.field-meta.xml
<CustomField>
    <fullName>Git_base_branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Git base branch</label>
    <referenceTo>copado__Git_Backup__c</referenceTo>
    <relationshipLabel>Environments</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>