force-app/main/default/objects/copado__Environment__c/fields/Is_Automated_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Is_Automated_Deployment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Automated Deployment?</label>
    <type>Checkbox</type>
</CustomField>