force-app/main/default/objects/copado__Environment__c/fields/Store_Conflict_Files__c.field-meta.xml
<CustomField>
    <fullName>Store_Conflict_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Conflict Files</label>
    <type>Checkbox</type>
</CustomField>